# tushare-mcp-server

./: .gitignore  README.md  mcp-config.json  pyproject.toml
.workbuddy/memory/: 2026-03-26.md
src/tushare_mcp_server/: __init__.py  __main__.py  server.py
