[project]
name = "tushare-mcp-server"
version = "0.1.0"
description = "MCP Server for Tushare Financial Data API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "tushare>=1.4.0",
    "pandas>=2.0.0",
]

[project.scripts]
tushare-mcp-server = "tushare_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
